force-app/main/default/objects/Program_PostalCode__c.object
<CustomObject>
    <description>Used to hold a list of postal codes that will be connected to a Program Enrollment. Used for flagging if a student is eligible for a given institution for a given year.</description>
    <fields>
        <fullName>Academic_Program__c</fullName>
        <label>Academic Program</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Program_PostalCode</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PostalCode</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potentially_Ineligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Potentially Ineligible</label>
        <type>Checkbox</type>
    </fields>
    <label>Program Postal Code</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Program Postal Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Postal Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Confirm_Postal_Codes_are_5_digits</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX( PostalCode__c , &quot;\\d{5}&quot;))</errorConditionFormula>
        <errorDisplayField>PostalCode__c</errorDisplayField>
        <errorMessage>Postal Codes must be 5 digits</errorMessage>
    </validationRules>
</CustomObject>