force-app/main/default/objects/Program_PostalCode__c/validationRules/Confirm_Postal_Codes_are_5_digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Confirm_Postal_Codes_are_5_digits</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( PostalCode__c , &quot;\\d{5}&quot;))</errorConditionFormula>
    <errorDisplayField>PostalCode__c</errorDisplayField>
    <errorMessage>Postal Codes must be 5 digits</errorMessage>
</ValidationRule>